# SensorGenome

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/raw/: sensorgenome_25_literature_curation.csv
data/sample/: probe_response_sample.csv
data/sample/raw_spectra/: SG-BIM-001_xylazine_emission.csv
docs/: BENCHMARK_DESIGN.md  CURATION_RULES.md  DATA_SCHEMA.md  GITHUB_ISSUES.md  OPEN_SOURCE_STRATEGY.md  PRIOR_ART_CHECKLIST.md  PROJECT_CHARTER.md  ROADMAP.md  V0_1_MILESTONE.md
docs/templates/: DATASET_CARD.md  MODEL_CARD.md
examples/: quickstart.py
notebooks/: README.md
paper/: OUTLINE.md
releases/: v0.1.0-alpha.md
reports/: README.md  baseline_metrics.joblib  baseline_metrics.json
scripts/: make_benchmark_split.py
sensorgenome/active_learning/: selection.py
sensorgenome/api/: main.py
sensorgenome/benchmarks/: metrics.py
sensorgenome/chemistry/: features.py
sensorgenome/cli/: main.py
sensorgenome/data/: validation.py
sensorgenome/models/: baseline.py
sensorgenome/schemas/: models.py  probe_response.schema.json
sensorgenome/utils/: io.py
tests/: test_baseline.py  test_validation.py
